--- a/templates/example/create.html
+++ b/templates/example/create.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{% static 'css/example.css' %}">
 </head>
 <body>
     <a href="{% url 'login' %}"> LOGIN</a>
@@ -12,13 +14,36 @@
     <div class="container">
         <div class="wrapper">
             <div class="form">
-                <form action="" method="POST">
-                    {% csrf_token %}
-                    {{ clientform }}
-                    <button type="submit">submit</button>
-                </form>
+                
+
+                    <form action="" method="POST" id="id_post">
+                        {% csrf_token %}
+                        {{ clientform }}
+                        
+                          <!-- modal  -->
+                            <!-- Trigger/Open The Modal -->
+
+                        <!-- The Modal -->
+                        <div id="myModal" class="modal">
+
+                            <!-- Modal content -->
+                            <div class="modal-content">
+                            <span class="close">&times;</span>
+                            <span id="textInput"></span>
+                            
+                            <button type="submit">submit</button>
+                            </div>
+                        </div> 
+                    </form>
+                    
+                    <button id="myBtn">preview</button>
+                <!-- </form> -->
             </div>
         </div>
     </div>
+
+  
+
+<script src="{% static 'js/example.js' %}"></script>
 </body>
 </html>
